kubernetes/apps/home-automation/zigbee2mqtt/app/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
  type: LoadBalancer
