kubernetes/apps/home-automation/zigbee2mqtt/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.altena.io
spec:
  ingressClassName: internal
  rules:
  - host: zigbee2mqtt.altena.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual
            port:
              name: web
